force-app/main/default/objects/Product2/fields/access_url__c.field-meta.xml
<CustomField>
    <fullName>access_url__c</fullName>
    <label>Access Url</label>
    <type>TextArea</type>
</CustomField>