force-app/main/default/objects/Product2/fields/Assignable_Super_Access_Only__c.field-meta.xml
<CustomField>
    <fullName>Assignable_Super_Access_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignable Super Access Only</label>
    <type>Checkbox</type>
</CustomField>