force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>cont-ih</fullName>
                <label>Content: Instructor Hub</label>
            </value>
            <value>
                <fullName>cont-rh</fullName>
                <label>Content: Research Hub</label>
            </value>
            <value>
                <fullName>cont-elrn-en</fullName>
                <label>Content: English Elearning</label>
            </value>
            <value>
                <fullName>cont-elrn-pt</fullName>
                <label>Content: Portugese Elearning</label>
            </value>
            <value>
                <fullName>cont-elrn-es</fullName>
                <label>Content: Spanish Elearning</label>
            </value>
            <value>
                <fullName>cont-elrn-fr</fullName>
                <label>Content: French Elearning</label>
            </value>
            <value>
                <fullName>cont-advtrk</fullName>
                <label>Content: Advanced Tracks</label>
            </value>
            <value>
                <fullName>cont</fullName>
                <label>Other Content</label>
            </value>
            <value>
                <fullName>lgy</fullName>
                <label>Legacy Apps</label>
            </value>
            <value>
                <fullName>lgy-rsrc</fullName>
                <label>Legacy Resources</label>
            </value>
            <value>
                <fullName>lgy-web</fullName>
                <label>Legacy Webinars</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Other Resources</label>
            </value>
            <value>
                <fullName>cont-kh</fullName>
                <label>Content: Knowledge Hub</label>
            </value>
            <value>
                <fullName>apps</fullName>
                <label>Apps</label>
            </value>
            <value>
                <fullName>bundles</fullName>
                <label>Bundles</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>