force-app/main/default/objects/Product2/fields/Dropship_Only__c.field-meta.xml
<CustomField>
    <fullName>Dropship_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if product should only go to Dropshipment BC Instance for Dropship Orders. Product will not go to non-dropship BC Instance. Does not impact Orders that do not have a dropshipment.</inlineHelpText>
    <label>Dropship Only</label>
    <type>Checkbox</type>
</CustomField>