force-app/main/default/objects/Product2/fields/is_grouped_product__c.field-meta.xml
<CustomField>
    <fullName>is_grouped_product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Grouped Product</label>
    <type>Checkbox</type>
</CustomField>