force-app/main/default/objects/Product2/fields/Is_Instructor_Hub__c.field-meta.xml
<CustomField>
    <fullName>Is_Instructor_Hub__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Instructor Hub</label>
    <type>Checkbox</type>
</CustomField>