force-app/main/default/objects/Product2/fields/Is_Prework__c.field-meta.xml
<CustomField>
    <fullName>Is_Prework__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Prework</label>
    <type>Checkbox</type>
</CustomField>