force-app/main/default/objects/Product2/fields/Is_Research_Hub__c.field-meta.xml
<CustomField>
    <fullName>Is_Research_Hub__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Research Hub</label>
    <type>Checkbox</type>
</CustomField>