force-app/main/default/objects/Product2/fields/Minimum_Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Number_of_Participants__c</fullName>
    <description>Represents the minimum number of participants in a purchased training session.</description>
    <label>Minimum Number of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>