force-app/main/default/objects/Product2/fields/Overage_Price__c.field-meta.xml
<CustomField>
    <fullName>Overage_Price__c</fullName>
    <description>Represents the price of a training session based on the number of participants that exceeds the base count.</description>
    <label>Overage Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>