force-app/main/default/objects/Product2/fields/Portal_Assignable_Product__c.field-meta.xml
<CustomField>
    <fullName>Portal_Assignable_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Assignable Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Assignable Product</relationshipLabel>
    <relationshipName>Assignable_Product</relationshipName>
    <type>Lookup</type>
</CustomField>