force-app/main/default/objects/Product2/fields/Portal_Code__c.field-meta.xml
<CustomField>
    <fullName>Portal_Code__c</fullName>
    <label>Portal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>