force-app/main/default/objects/Product2/fields/Portal_is_assignable__c.field-meta.xml
<CustomField>
    <fullName>Portal_is_assignable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal is assignable</label>
    <type>Checkbox</type>
</CustomField>