force-app/main/default/objects/Product2/fields/Program_Title__c.field-meta.xml
<CustomField>
    <fullName>Program_Title__c</fullName>
    <label>Program Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program_Titles</valueSetName>
    </valueSet>
</CustomField>