force-app/main/default/objects/Product2/fields/pse__Forecast_Curve__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Curve__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast Curve</label>
    <referenceTo>pse__Forecast_Curve__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>