force-app/main/default/objects/Product2/fields/pse__IsServicesProduct__c.field-meta.xml
<CustomField>
    <fullName>pse__IsServicesProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsServicesProduct</label>
    <type>Checkbox</type>
</CustomField>