force-app/main/default/objects/Product2/fields/purchase_url__c.field-meta.xml
<CustomField>
    <fullName>purchase_url__c</fullName>
    <label>Purchase Url</label>
    <type>TextArea</type>
</CustomField>