force-app/main/default/objects/Product2/fields/Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Resource_ID__c</fullName>
    <label>Resource ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>