force-app/main/default/objects/Product2/fields/Subscription_Length_days__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Length_days__c</fullName>
    <label>Subscription Length (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>