force-app/main/default/objects/Product2/fields/Text_Training_Event_Program_Title__c.field-meta.xml
<CustomField>
    <fullName>Text_Training_Event_Program_Title__c</fullName>
    <label>Text Training Event Program Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>