force-app/main/default/objects/Product2/fields/Training_event_program_title__c.field-meta.xml
<CustomField>
    <fullName>Training_event_program_title__c</fullName>
    <inlineHelpText>This is the field that will put the item on the training event when created.</inlineHelpText>
    <label>Training Event Program Title</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Delivering Project Results Workshop</fullName>
            </value>
            <value>
                <fullName>ECM Boot Camp</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Change Workshop</fullName>
            </value>
            <value>
                <fullName>Integrating Agile</fullName>
            </value>
            <value>
                <fullName>Leading your team through change</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Practitioner</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Taking Charge of Change</fullName>
            </value>
            <value>
                <fullName>TTT - Level 1</fullName>
            </value>
            <value>
                <fullName>TTT - Level 2</fullName>
            </value>
            <value>
                <fullName>Methodology Application Program</fullName>
            </value>
            <value>
                <fullName>Improve Project Health</fullName>
            </value>
            <value>
                <fullName>ADKAR Model Mastery Level 1: Prevent Change Resistance</fullName>
            </value>
            <value>
                <fullName>ADKAR Model Mastery Level 2: Resolve Change Barriers</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
                <isActive>false</isActive>
                <label>Conference</label>
            </value>
            <value>
                <fullName>Internal</fullName>
                <isActive>false</isActive>
                <label>Internal</label>
            </value>
            <value>
                <fullName>Onsite</fullName>
                <isActive>false</isActive>
                <label>Onsite</label>
            </value>
            <value>
                <fullName>Public</fullName>
                <isActive>false</isActive>
                <label>Public</label>
            </value>
            <value>
                <fullName>Public Partnership</fullName>
                <isActive>false</isActive>
                <label>Public Partnership</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>