force-app/main/default/objects/Product2/fields/user_agreement__c.field-meta.xml
<CustomField>
    <fullName>user_agreement__c</fullName>
    <label>User Agreement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>