force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Subscription_Length_days__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>prosci_portal_db_id__c</columns>
    <columns>Is_Research_Hub__c</columns>
    <columns>Portal_Code__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>