force-app/main/default/objects/Product2/listViews/Portal_Tools.listView-meta.xml
<ListView>
    <fullName>Portal_Tools</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Training_event_program_title__c</columns>
    <columns>Subscription_Length_days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Portal_is_assignable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Portal Tools</label>
</ListView>