force-app/main/default/objects/Product2/listViews/Products_created_by_Mike.listView-meta.xml
<ListView>
    <fullName>Products_created_by_Mike</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>startsWith</operation>
        <value>mz</value>
    </filters>
    <label>Products created by Mike</label>
</ListView>